<resources>
    <string name="app_name">Egg Timer</string>
    <string name="timer">06:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="soft">Soft</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="close">Close</string>
    <string name="custom">Custom</string>
    <string name="set_custom_timer">Set Custom Timer</string>
    <string name="egg_ready">Your egg is ready!</string>
</resources>