<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <com.borutsky.neumorphism.NeumorphicFrameLayout
        android:id="@+id/blockTimer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:clipChildren="false"
        android:text="Hello World!"
        app:background_color="@color/color_background"
        app:corner_radius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape="rectangle"
        app:state="flat">

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:background_color="@color/color_background"
            app:shape="circle"
            app:state="pressed">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/timer"
                android:textSize="36sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

    </com.borutsky.neumorphism.NeumorphicFrameLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blockTimer">

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:id="@+id/buttonStop"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            app:background_color="@color/color_stop_button"
            app:corner_radius="10dp"
            app:shape="rectangle"
            app:state="pressed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset"
                android:textSize="16sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:id="@+id/buttonStart"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            app:background_color="@color/color_start_button"
            app:corner_radius="10dp"
            app:shape="rectangle"
            app:state="flat">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start"
                android:textSize="16sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

    </LinearLayout>

    <com.borutsky.neumorphism.NeumorphicFrameLayout
        android:id="@+id/radioButtonSection"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        app:background_color="@color/color_background"
        app:corner_radius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:shape="rectangle"
        app:state="convex">

        <RadioGroup
            android:id="@+id/radioGroupEggCookType"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:elevation="24dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonSoftCooked"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:background="@drawable/bg_radio_button_type_selector_left"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:paddingVertical="18dp"
                android:text="@string/soft"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonMediumCooked"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:background="@drawable/bg_radio_button_type_selector_middle"
                android:button="@android:color/transparent"
                android:checked="true"
                android:gravity="center"
                android:paddingVertical="18dp"
                android:text="@string/medium"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioButtonHardCooked"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:background="@drawable/bg_radio_button_type_selector_right"
                android:button="@android:color/transparent"
                android:checked="false"
                android:gravity="center"
                android:paddingVertical="18dp"
                android:text="@string/hard"
                android:textSize="16sp" />

        </RadioGroup>

    </com.borutsky.neumorphism.NeumorphicFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>