<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:clipChildren="false"
    tools:context=".ui.TimerFragment">

    <com.borutsky.neumorphism.NeumorphicFrameLayout
        android:id="@+id/blockTimer"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:clipChildren="false"
        android:text="Hello World!"
        app:background_color="?attr/colorSurface"
        app:corner_radius="40dp"
        app:layout_constraintBottom_toTopOf="@+id/llButtons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape="rectangle"
        app:state="flat">

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:background_color="?attr/colorSurface"
            app:shape="circle"
            app:state="pressed">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:maxLength="5"
                android:text="@string/timer"
                android:textColor="?attr/colorOnSurface"
                android:textSize="36sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

    </com.borutsky.neumorphism.NeumorphicFrameLayout>

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clipChildren="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/blockTimer">

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:id="@+id/buttonStop"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            app:background_color="?attr/colorSurface"
            app:corner_radius="10dp"
            app:shape="circle"
            app:state="concave">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reset"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

        <com.borutsky.neumorphism.NeumorphicFrameLayout
            android:id="@+id/buttonStart"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="20dp"
            app:background_color="?attr/colorSurface"
            app:corner_radius="10dp"
            app:shape="circle"
            app:state="convex">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start"
                android:textColor="?attr/colorOnSurface"
                android:textSize="20sp" />

        </com.borutsky.neumorphism.NeumorphicFrameLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupEggCookType"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:elevation="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:background_color="?attr/colorSurface"
        app:layout_constraintBottom_toTopOf="@+id/llSliderInformation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:id="@+id/radioButtonSoftCooked"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_radio_button_type_selector_left"
            android:button="@android:color/transparent"
            android:checked="false"
            android:elevation="10dp"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/soft"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonMediumCooked"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_radio_button_type_selector_middle"
            android:button="@android:color/transparent"
            android:checked="true"
            android:elevation="10dp"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/medium"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButtonHardCooked"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/bg_radio_button_type_selector_right"
            android:button="@android:color/transparent"
            android:checked="false"
            android:elevation="10dp"
            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/hard"
            android:textColor="?attr/colorOnSurface"
            android:textSize="18sp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llSliderInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.slider.Slider
            android:id="@+id/timerSlider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:value="6"
            app:trackColor="@color/color_start_button_dark"
            app:trackColorActive="@color/color_start_button"
            app:thumbColor="@color/color_start_button"
            app:haloColor="@color/color_start_button_dark"
            android:valueFrom="0.1"
            android:valueTo="12.0" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>